Finish check for updates, and added menu item for it. More testing on updating save file is needed before v1.1 release